@@ -16,24 +16,26 @@ import           Control.Applicative
 import           Control.Monad
 import qualified Data.Aeson                                 as Ae
 import qualified Data.ByteString                            as S
+import qualified Data.Text                                  as T
 import           System.Environment.Parser.FromEnv
 import           System.Environment.Parser.Internal.Collect
 import           System.Environment.Parser.Internal.FreeA
+import           System.Environment.Parser.Slot
 import           System.Posix.Env.ByteString
 
 -- | The signature of the 'Parser' applicative.
 data ParserF x
-  = Get (S.ByteString)
+  = Get (Slot x)
         (S.ByteString -> Either String x)
 
-key :: ParserF a -> S.ByteString
-key (Get s _) = s
+getSlot :: ParserF a -> Slot a
+getSlot (Get s _) = s
 
 unpickle :: ParserF a -> S.ByteString -> Either String a
 unpickle (Get _ f) = f
 
 instance Functor ParserF where
-  fmap f (Get s go) = Get s (fmap f . go)
+  fmap f (Get s go) = Get (fmap f s) (fmap f . go)
 
 -- | The 'Parser' type is an effectual context where you can use ENV
 -- information to build a value containing configuration information.
@@ -50,25 +52,25 @@ data Error
 -- | Look up a key in the ENV. This operation may fail if the key is
 -- missing or if the value cannot be parsed according to its 'FromEnv'
 -- instance.
-get' :: (S.ByteString -> Either String a) -> S.ByteString -> Parser a
+get' :: (S.ByteString -> Either String a) -> Slot a -> Parser a
 get' phi s = Parser . one $ Get s phi
 
 -- | Look up a key in the ENV. This operation may fail if the key is
 -- missing or if the value cannot be parsed according to its 'FromEnv'
 -- instance.
-get :: FromEnv a => S.ByteString -> Parser a
+get :: FromEnv a => Slot a -> Parser a
 get = get' fromEnv
 
 -- | Look up a key containing a JSON value in the ENV. This operation may
 -- fail if the key is missing or if the value cannot be parsed according to
 -- its 'Ae.FromJSON' instance.
-json :: Ae.FromJSON a => S.ByteString -> Parser a
+json :: Ae.FromJSON a => Slot a -> Parser a
 json = get' (fromEnv >=> Ae.eitherDecode)
 
 -- | Look up a key containing a serialized Haskell value in the ENV. This
 -- operation may fail if the key is missing or if the value cannot be
 -- parsed according to its 'Read' instance.
-read :: Read a => S.ByteString -> Parser a
+read :: Read a => Slot a -> Parser a
 read = get' go where
   go :: Read a => S.ByteString -> Either String a
   go bs = do
@@ -76,20 +78,23 @@ read = get' go where
     case reads str of
       [(a, "")] -> Right a
       _         -> Left ("read failed: " ++ str)
- 
+
 -- | Compute all ENV variables which are required in order to run
 -- a 'Parser'.
-deps :: Parser a -> [S.ByteString]
-deps = getConst . raise (\g -> Const [key g]) . unParser
+deps :: Parser a -> [(S.ByteString, Maybe T.Text)]
+deps = getConst . raise phi . unParser where
+  phi g = let s = getSlot g in Const [(getKey s, getDoc s)]
 
 -- | The core error handling component used in both 'parse' and 'test'
 run :: ParserF b
     -> Maybe S.ByteString
+    -> Maybe b
     -> Collect [(S.ByteString, Error)] b
-run g Nothing   = miss [(key g, MissingName)]
-run g (Just bs) =
+run g Nothing   Nothing  = miss [(getKey $ getSlot g, MissingName)]
+run _ Nothing   (Just a) = have a
+run g (Just bs) _ =
   case unpickle g bs of
-    Left err -> miss [(key g, ParseError err)]
+    Left err -> miss [(getKey $ getSlot g, ParseError err)]
     Right v  -> have v
 
 -- | Runs a 'Parser' in the 'IO' monad, looking up the required environment
@@ -99,8 +104,9 @@ parse :: Parser a -> IO (Either [(S.ByteString, Error)] a)
 parse = fmap collect . getCompose . raise phi . unParser where
   phi :: ParserF x -> (IO :.: Collect [(S.ByteString, Error)]) x
   phi g = Compose $ do
-    x <- getEnv (key g)
-    return (run g x)
+    let s = getSlot g
+    x <- getEnv (getKey s)
+    return (run g x (getDef s))
 
 -- | Evaluates a 'Parser' purely in a fake environment. Compare this with
 -- 'parse'. In the event that -- lookup fails this reports the name of the
@@ -109,4 +115,6 @@ test :: (S.ByteString -> Maybe S.ByteString)
      -> Parser a -> Either [(S.ByteString, Error)] a
 test find (Parser p) = collect (raise phi p) where
   phi :: ParserF x -> Collect [(S.ByteString, Error)] x
-  phi g = run g (find (key g))
+  phi g =
+    let s = getSlot g
+    in run g (find (getKey s)) (getDef s)
