@@ -1,3 +1,11 @@
+* Created the Slot type which expands upon the idea that we reference
+  environment variables by names with information about default values 
+  or documentation.
+
+  * Provides a lensy interface for building slots.
+
+---
+
 * Added the parsing of Heroku-style database connections
 
 ---
